--- a/Blanche_de_Noel/Assembly-CSharp.csproj
+++ b/Blanche_de_Noel/Assembly-CSharp.csproj
@@ -57,6 +57,7 @@
   <ItemGroup>
      <Compile Include="Assets\DayViewTemplate\Scripts\DayController.cs" />
      <Compile Include="Assets\DayViewTemplate\Scripts\MessageTextController.cs" />
+     <Compile Include="Assets\InfoView\Scripts\InfoViewController.cs" />
      <Compile Include="Assets\TitleView\Scripts\GAMEMAIN.cs" />
      <Compile Include="Assets\TitleView\Scripts\TitleImageTempController.cs" />
  <Reference Include="Unity.Timeline.Editor">
