--- a/Blanche_de_Noel/Assembly-CSharp.csproj
+++ b/Blanche_de_Noel/Assembly-CSharp.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\DayViewTemplate\Scripts\DayController.cs" />
+    <Compile Include="Assets\DayViewTemplate\Scripts\DayText.cs" />
     <Compile Include="Assets\DayViewTemplate\Scripts\MessageTextController.cs" />
     <Compile Include="Assets\TitleView\Scripts\GAMEMAIN.cs" />
     <Compile Include="Assets\TitleView\Scripts\TitleImageTempController.cs" />
