--- a/Blanche_de_Noel/Assembly-CSharp.csproj
+++ b/Blanche_de_Noel/Assembly-CSharp.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Assets\DayViewTemplate\Scripts\MessageTextController.cs" />
     <Compile Include="Assets\DifficultyLevelView\Scripts\ChooseDifficultyController.cs" />
     <Compile Include="Assets\InfoView\Scripts\InfoViewController.cs" />
+    <Compile Include="Assets\ResultView\Scripts\ResultSceneController.cs" />
     <Compile Include="Assets\TitleView\Scripts\CanvasFadeController.cs" />
     <Compile Include="Assets\TitleView\Scripts\GAMEMAIN.cs" />
     <Compile Include="Assets\TitleView\Scripts\GradationFadeController.cs" />
